# bevy_survivors

./: Cargo.toml
src/: lib.rs
src/animation/: mod.rs
src/gameplay/enemy/: shooter.rs  sprinter.rs  walker.rs
