[package]
name = "bevy_survivors"
version = "0.0.1"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_sprite_render",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "reflect_auto_register",
  "wayland",
] }

wayland-sys = { version = "0.31", features = ["dlopen"] }

# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

bevy_rand = { version = "0.12", features = ["wyrand"] }
rand_core = "0.9"
rand = "0.9"

leafwing-input-manager = "0.18.0"
bevy-inspector-egui = "0.35"
bevy_enhanced_input = "0.19"
bevy_seedling = { git = "https://github.com/CorvusPrudens/bevy_seedling.git", branch = "master" }
bevy_ecs_tilemap = "0.17.0"

# Latest version that works with bevy_seedling
wasm-bindgen = { version = "=0.2.101", optional = true }

[features]

default = ["dev_native"]
dev = [
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  "bevy/track_location",
]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]

[package.metadata.bevy_cli.release]
# Disable debug functionality in release builds.
default-features = false

[package.metadata.bevy_cli.web]
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]


[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4
